# data-viz-demo

./: .gitignore  MODULE.bazel  README.md
backend/: BUILD.bazel  logger.py  main.py  prediction.py  regression.py  requirements.in  requirements_lock.txt  types.py
