module(
    name = "data-viz-demo",
    version = "1.0",
)

bazel_dep(name = "rules_python", version = "1.9.0")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "python_deps",
    python_version="3.11",
    requirements_lock = "//backend:requirements_lock.txt",
)
use_repo(pip, "python_deps")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    python_version="3.11",
)
